--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@elevenlabs/react": "^0.11.0",
     "@supabase/supabase-js": "^2.81.1",
     "axios": "^1.13.2",
     "leaflet": "^1.9.4",
