--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@elevenlabs/react": "^0.11.0",
     "@supabase/supabase-js": "^2.81.1",
+    "aos": "^2.3.4",
     "axios": "^1.13.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
